# Pick_and_place_kuka_kr5_arc

./: README.md
kr5_description/: CMakeLists.txt
kr5_description/launch/: load_kr5_arc.launch
kr5_description/urdf/: kr5_arc.xacro
kr5_gazebo/: package.xml
kr5_gazebo/urdf/: gazebo_transmission.xacro
kr5_master/: package.xml
kuka_kr5_arc/kr5_description/: package.xml
kuka_kr5_arc/kr5_description/launch/: test_kr5_arc.launch
kuka_kr5_arc/kr5_description/urdf/: kr5_arc_macro.xacro
kuka_kr5_arc/kr5_gazebo/launch/: kr5_control.launch  load_kr5.launch
kuka_kr5_arc/kr5_gazebo/urdf/: gazebo.xacro  gazebo_transmission.xacro  transmission_2f.xacro
kuka_kr5_arc/kr5_moveit/: package.xml
